--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,30 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container">
+    <header>
+        <h1>Welcome to My Enhanced MVC Website</h1>
+    </header>
+    <section>
+        <h2>About Me</h2>
+        <p>I'm David Gamet a developer who is currently looking for work. 
+            Here, I'll explain my experiences and cover some of my projects.
+        </p>
+    </section>
+    <section>
+        <h2>Features</h2>
+        <ul>
+            <li>Responsive design</li>
+            <li>Rich user interface</li>
+            <li>Scalable architecture</li>
+        </ul>
+    </section>
+    <section>
+        <h2>Contact Me</h2>
+        <p>If you have any questions or feedback, feel free to contact me:</p>
+        <address>
+            Email: <a href="daves.address4@gmail.com">daves.address4@gmail.com</a><br>
+            @* Phone: +1 (123) 456-7890 *@
+        </address>
+    </section>
 </div>
