modified:   Views/Home/Index.cshtml 	modified:   wwwroot/css/site.css

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="container">
-    <header>
+    <header class="head">
         <h1>Welcome to My Enhanced MVC Website</h1>
     </header>
     <section>
