modified:   Views/Home/Index.cshtml 	modified:   bin/Debug/net7.0/Dotnet-Mvc-BoilerPlate.dll 	modified:   bin/Debug/net7.0/Dotnet-Mvc-BoilerPlate.pdb 	modified:   obj/Debug/net7.0/Dotnet-Mvc-BoilerPlate.dll 	modified:   obj/Debug/net7.0/Dotnet-Mvc-BoilerPlate.pdb

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="container">
     <header class="head">
-        <h1>Welcome to My Enhanced MVC Website</h1>
+        <h1>Welcome to My Enhanced ASP.NET MVC Website</h1>
     </header>
     <section>
         <h2>About Me</h2>
